--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,26 @@
+== Getting Started with Spring Cloud Data Flow
+This guide walks you through an overview of Spring Cloud Data Flow and the process of orchestrating an event-driven
+streaming and short-lived batch data pipelines.
 
+=== What is Spring Cloud Data Flow?
+A microservices-based Streaming and Batch data processing in Cloud Foundry and Kubernetes. You can learn more about
+the Spring Cloud Data Flow from the link:https://spring.io/projects/spring-cloud-dataflow[project-site],
+link:https://spring.io/projects/spring-cloud-dataflow#learn[documentation],
+and link:https://github.com/spring-cloud/spring-cloud-dataflow-samples[samples].
+
+Furthermore, you can read Spring Cloud Data Flow's link:https://dataflow.spring.io/docs/concepts/architecture/[architecture and the building blocks]
+to familiarize yourself.
+
+=== Spring Cloud Data Flow + Pre-built Applications
+In the following guide, you will create and deploy a streaming data pipeline using pre-built applications.
+
+link:https://dataflow.spring.io/docs/stream-developer-guides/getting-started/stream/[Spring Cloud Data Flow with Pre-built Applications]
+
+=== Spring Cloud Data Flow + Custom Applications
+In the following guide, you will create and deploy a streaming data pipeline using custom applications.
+
+link:https://dataflow.spring.io/docs/stream-developer-guides/streams/data-flow-stream/[Spring Cloud Data Flow with Custom Applications]
+
+== Summary
+Congratulations! You have learned Spring Cloud Data Flow's high-level overview, and you were able to build, deploy, and
+launch streaming and batch data pipelines in Cloud Foundry, Kubernetes, and Local.
